# whisper-meetings

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
assets/: nova-design-philosophy.md  nova-logo-gen.js  philosophy.md  render.js
assets/icons/icons/mac/: icon.icns
demo/: index.html
electron/: main.js  package-lock.json  package.json  preload.js
electron/renderer/: audio-processor.js  index.html
src/whisper_meetings/: __init__.py  cli.py  mapper.py  schema.py  server.py  streaming.py  transcriber.py  validators.py
tests/: conftest.py  test_cli.py  test_imports.py  test_integration.py  test_mapper.py  test_schema.py  test_server.py  test_streaming.py  test_transcriber.py  test_validators.py
tests/fixtures/: expected_output.json  mock_mlx_output.json  mock_mlx_output_empty.json  mock_mlx_output_no_words.json
